5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1800_2572.log
== TEST (2019-06-11 16:53:03) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0


for i in range(size(m)):
	if m[i] % 2 != 0:
		impar = impar + 1

tm = size(m)-impar
d = zeros(size(tm), dtype=int)
for i in range(size(m)):
	if m[i] % 2 == 0:
		m[i]=d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:53) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0


for i in range(size(m)):
	if m[i] % 2 != 0:
		impar = impar + 1

tm = size(m)-impar
d = zeros(size(tm), dtype=int)
for i in range(size(m)):

print(impar)
-- ERROR:
File "XXXX", line 15
    print(impar)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:00) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0


for i in range(size(m)):
	if m[i] % 2 != 0:
		impar = impar + 1

tm = size(m)-impar
d = zeros(size(tm), dtype=int)


print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:47) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-impar
d = zeros(size(tm), dtype=int)


print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:56) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)


print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:11) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)


print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:58:09) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)

for x in range(size(m)):
	if m[i] % 2 == 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:06) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)

for x in range(size(m)):
	if m[i] % 2 == 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:26) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:35) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:41) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(size(tm), dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:52) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(t, dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:12:57) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(t, dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:03) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(tm, dtype=int)

#for x in range(size(m)):
#	if m[i] % 2 == 0:
#		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:12) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(tm, dtype=int)

for x in range(size(m)):
	if m[i] % 2 == 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:39) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(tm, dtype=int)

for x in range(size(m)):
	if m[i] % 2 == 0:
		d[0] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:59) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
d = zeros(tm, dtype=int)

for x in range(size(m)):
	if m[i] % 2 != 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:14:15) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par


for x in range(size(m)):
	d = zeros(tm, dtype=int)
	if m[i] % 2 != 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:14:34) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par


for x in range(size(m)):
	d = zeros(tm, dtype=int)
	if m[i] % 2 != 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:14:53) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par


for x in range(size(m)):
	d = zeros(tm, dtype=int)
	if m[i] % 2 != 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:15:06) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par


for x in range(size(m)):
	d = zeros(tm, dtype=int)
	if m[i] % 2 != 0:
		d[i] = m[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:15:40) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par


for x in range(size(m)):
	d = zeros(tm, dtype=int)
	if m[x] % 2 != 0:
		d[x] = m[x]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:15:55) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par

d = zeros(tm, dtype=int)
for x in range(size(m)):
	if m[x] % 2 != 0:
		d[x] = m[x]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:16:05) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par

d = zeros(tm, dtype=int)
for x in range(size(m)):
	if m[x] % 2 != 0:
		d[x] = m[x]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:16:17) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par

d = zeros(tm, dtype=int)
#for x in range(size(m)):
#	if m[x] % 2 != 0:
#		d[x] = m[x]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:58:33) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
a = 0
b = 0
d = zeros(tm, dtype=int)
for x in range(size(m)):
	if m[x] % 2 != 0:
		tm[a] = m[b]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:59:49) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0


for i in range(size(m)):
	if m[i] % 2 == 0:
		par = par + 1

tm = size(m)-par
a = 0
b = 0
d = zeros(tm, dtype=int)
for x in range(size(m)):
	if m[x] % 2 != 0:
		tm[a] = m[b]
		a = a + 1
	b = b+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:01:36) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
par = 0
for i in m:
	if m[i] % 2 == 0:
		par = par + 1
tm = size(m)-par
a = 0
b = 0
d = zeros(tm, dtype=int)
for x in m:
	if m[x] % 2 != 0:
		tm[a] = m[b]
		a = a + 1
	b = b+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:05:39) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0
for i in m:
	if m[i]%2 != 0:
		impar = impar + 1
tm = zeros(impar, dtype=int)
a = 0
b = 0
for j in m:
	if m[i] != 0:
		tm[i] = m[i]
print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:06:21) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0
for i in m:
	if i%2 != 0:
		impar = impar + 1
tm = zeros(impar, dtype=int)
a = 0
b = 0
for j in m:
	if i != 0:
		tm[i] = m[i]
print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:06:46) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0
for i in m:
	if i%2 != 0:
		impar = impar + 1
tm = zeros(impar, dtype=int)
a = 0
b = 0
for j in m:
	if j != 0:
		tm[j] = m[j]
print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:07:48) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0
for i in m:
	if i%2 != 0:
		impar = impar + 1
tm = zeros(impar, dtype=int)
a = 0
b = 0
for j in m:
	if j%2 != 0:
		tm[a] = m[b]
		a = a + 1
	b = b + 1
print(tm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:07:57) 
-- CODE:
from numpy import*

m = array(eval(input("Matricula dos alunos:")))
impar = 0
for i in m:
	if i%2 != 0:
		impar = impar + 1
tm = zeros(impar, dtype=int)
a = 0
b = 0
for j in m:
	if j%2 != 0:
		tm[a] = m[b]
		a = a + 1
	b = b + 1
print(tm)

-- EXECUTION TIME:
0.819212
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
